<resources>
    <string name="app_name">朝闻道</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="navigation_community">社区</string>
    <string name="navigation_discovery">发现</string>
    <string name="navigation_notification">通知</string>
    <string name="navigation_mine">我的</string>

    <string name="my_info">我的个人信息</string>
    <string name="email_settings">邮箱设置</string>
    <string name="mine_check_in">打卡签到</string>
    <string name="mine_my_following">我的关注</string>
    <string name="mine_my_follower">我的粉丝</string>
    <string name="mine_my_favorite">我的收藏</string>
    <string name="mine_my_post">我的文章</string>
    <string name="mine_my_check_in">我的签到</string>
    <string name="mine_my_reply">我的评论</string>
    <string name="temporary_reply">回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复回复</string>

    <string name="attention">关注</string>
    <string name="reply">回复</string>

    <string name="post">发帖</string>
    <string name="popular_articles">热门文章</string>
    <string name="all">全部 ></string>
    <string name="hot_tags">热门标签</string>
    <string name="focus">关注</string>
    <string name="test_article_content">
        当前位置:
        首页 > 摄影教程 > 十分钟教你入门延时摄影
        十分钟教你入门延时摄影

        延时摄影指长时间定时定格延时拍摄，亦称低速摄影或定时定格摄影，是以一种较低的帧率拍下图像或者视频，然后用正常或者较快的速率播放画面的摄影技术，是一种定时、间断记录并以明显变化的影像再现景物缓慢变化过程的手段。在一段延时摄影视频中，物体或者景物缓慢变化的过程被压缩到一个较短的时间内，呈现出平时用肉眼无法察觉的奇异精彩的景象。
        在影片中使用延时摄影这个技巧，经常能制作出令人叹为观止的影片，从自然纪录片，到生活剧集，再到简单的故事片等等，你都能看到它的身影。延时摄影通常应用在拍摄城市风光、自然风景、天文现象、生物演变等等题材上。

        主要器材：单反相机、三脚架 辅助器材：定时快门线、延时轨道、镜头滤镜等。

        主要器材
        使用单反相机拍摄延时摄影，需要等时间间隔拍摄一系列照片，不太可能完全用手按动快门。很多相机不具备间隔拍摄功能，这就需要外部定时器了。
        ￼
        延时轨道
        装有步进电机与快门控制器的摄影轨道。通过精密的电子和机械控制，使相机每拍摄一张照片便在轨道上移动一定距离，达到移动拍摄的目的。延时轨道是一种比较专业延时拍摄设备。

        镜头滤镜
        主要分三种，一种ND镜，用来过滤光线减低镜头进光量;第二种是滤色镜，用来调整拍摄体的自身色彩;另一张是星芒镜，用来调整光斑形状。

        ￼
        三脚架
        延时摄影的拍摄需要稳定的拍摄平台，任何的晃动都会造成后期视频画面抖动晃动。三脚架可以保证拍摄画面的稳定。对于大范围位移延时，三脚架更是不能缺少。稳定压倒一切。一定要将摄像机牢牢固定在坚固的三脚架上，避免刮风等原因造成摄像机的晃动导致拍摄失败。
        ￼
        准备充足的备用电池、储存卡，延时拍摄一般要工作几个小时甚至几十个小时，所以一定要根据所需素材的时长准备充足的附件，条件允许的情况下最好接通交流电进行拍摄。
        机身设置 M档，ISO手动。光圈通常不宜过小，小光圈虽然能带来大景深，但也会带来镜头和CCD上灰尘的印迹以及光线的衍射。F8往上都是比较合适的光圈。白平衡手动，可以用预设，也可以手动调节K值。关闭机身高感降噪、关闭机身自动暗部补偿（尼康的D-lighting，佳能的高光优先模式、索尼和宾得的自动HDR） 注意点:在傍晚和日出的时候，光线变化较大。根据经验，冬季30分钟内，光线变化最高可达3EV，请适当调整曝光。
        ￼
        快门线设置 只需要设置INTVL选项（永诺MC-36b），这一项是每次拍摄的间隔时间。比如在拍摄城市白天的车流和行人时，间隔时间设置为1秒，机身设置快门速度在1秒以内。在拍摄城市夜晚的车流时，间隔时间设置为2秒到5秒之间，机身设置快门速度为间隔时间减1。（例：间隔时间为3秒，机身设置快门速度为2秒）在拍摄天空云层运动时，依云层运动速度，设置间隔时间为3秒到10秒不等，云层运动速度越慢，间隔时间最越长。

        三脚架固定相机、取景 拍摄时长（分钟）=间隔拍摄的时间（秒）×24×最终想要片段的时长（秒）÷60 拍摄张数=24×最终想要片段的时长（秒） 例：最终想要一段20秒的延时摄影片段，间隔拍摄时间为3秒，那么拍摄时长为：3×24×20÷60=24（分钟），拍摄张数为：20×24=480张 注意点：一般尽量多拍，假如需要一个10秒的片段，那么最好原始片段在15秒到20秒，为视频后期的转场留下空间。
        ￼
        准备充分后就可以开始拍摄了。例如按照24帧的视频来算，一段15秒的视频需要360张照片。如果4秒钟一个时间间隔，则至少需要24分钟时间来拍摄。
        后期制作 将拍摄好的照片导入lightroom或PS中，使用批处理对全部照片使用相同的操作调整。这里以PS为例，教你进行批处理。 1、打开ps软件，选择文件>自动>批处理。 2、在弹出的对话框中，选择需要执行操作的动作命令，然后定位到源目标文件夹，即所需要修改大小的图片所在位置。然后，点击确定。
        ￼
        将连续照片拼合成视频的软件很多。比如有：Photolapse 3、VirtualDub、QuickTime Pro、Adobe Premiere Elements、Lightroom、Final Cut Pro、Adobe After Effects。这些都可以制作视频，且不局限于这些，完全可以按照自己的习惯和能力去选择。 当然，后期制作决不只有拼合照片这一点，一段优秀的延时摄影视频需要加入音乐，而且应用大量的剪辑片段。 那么面对成百上千张序列照片怎么能成为一段连续的视频？下面我们使用PR为大家讲解。
</string>
    <string name="comment">评论</string>
    <string name="at_me">\@我</string>
    <string name="notice">通知</string>
    <string name="magician">膜法师</string>
    <string name="at_me_already">\@了我</string>
    <string name="test_article_tittle">如何使用单反拍摄延时摄影？</string>
    <string name="liked_your_comment"> &#160;赞了你的评论</string>
    <string name="welcome_text">朝&#160;&#160;闻&#160;&#160;道</string>
    <string name="app_flags">朝闻道夕死可矣</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="username_or_email">用户名/邮箱</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="repeat_password">确认密码</string>
    <string name="login_ok">确定</string>
    <string name="login_third_party">第三方登录</string>
    <string name="login_qq">QQ</string>
    <string name="login_github">GitHub</string>
    <string name="login_weibo">微博</string>

    <string name="primary_email">主邮箱</string>
    <string name="unverified">未验证</string>
    <string name="set_primary">设为主邮箱</string>
    <string name="delete">删除</string>
    <string name="verify">验证</string>
    <string name="click">点击</string>
    <string name="have_read">已读</string>
    <string name="zero">0</string>
    <string name="log_out">退出登录</string>
    <string name="settings">设置</string>
</resources>
