<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/offset_20dp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/offset_20dp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/register_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/offset_20dp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/offset_20dp"
            android:background="@drawable/edit_text_frame"
            android:hint="@string/email"
            android:singleLine="true" />

        <Button
            android:id="@+id/register_ok"
            android:layout_width="@dimen/offset_200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/offset_10dp"
            android:background="@drawable/button_ok"
            android:text="@string/login_ok" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>