<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/post_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp">
        <TextView
            android:id="@+id/read_notification"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:padding="30dp"
            android:layout_height="match_parent"
            android:text="@string/have_read"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/delete_notification"
            android:layout_toStartOf="@id/read_notification"
            android:layout_width="wrap_content"
            android:padding="30dp"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:background="@color/colorWhite"
        android:paddingBottom="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/re"
                android:layout_width="50dp"
                android:layout_height="50dp">
                <ImageView
                    android:id="@+id/replay_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/jerry_zheng"/>
                <ImageView
                    android:id="@+id/red_dot"
                    android:layout_alignParentEnd="true"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:background="@drawable/ic_red_dot"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/re"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/replay_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/magician"/>
                    <TextView
                        android:id="@+id/final_atme"
                        android:layout_toEndOf="@id/replay_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" 在 "/>
                    <TextView
                        android:layout_toEndOf="@id/final_atme"
                        android:id="@+id/replay_article"
                        android:layout_width="150dp"
                        android:layout_height="18dp"
                        android:text="@string/test_article_tittle"
                        android:textColor="@color/colorPrimaryText"/>
                    <TextView
                        android:id="@+id/replay_date"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5月20日"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/colorPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/at_me_already"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="5dp"
            android:padding="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fillet_frame">
            <TextView
                android:id="@+id/final_text_my_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:text="TA对你说："/>
            <TextView
                android:id="@+id/text_my_comment"
                android:layout_width="200dp"
                android:layout_height="18dp"
                android:layout_toEndOf="@id/final_text_my_comment"
                android:text="现在由陈独秀发言"/>
            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/see_details"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:text="查看详细"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

